add search criteria to browseQuestions view

--- a/views/browseQuestions.jade
+++ b/views/browseQuestions.jade
@@ -5,13 +5,23 @@ block head
 
 block content
 	div.browse-questions-holder.js-content(data-api-url="#{apiUrl}",data-view="browseQuestions")
+		p.collapse.alert.alert-danger.alert-dismissable.js-error-alert
+			a.close(href="#",data-dismiss="alert" aria-label="close") &times; 
+			| Hubo un error con tu búsqueda, por favor intentalo de nuevo.
 		h2 Solicitudes enviadas
 		p Aquí puedes consultar todas las solicitudes que han enviado otros usuarios.
 		div.search-holder.js-search-holder
-			div.form-group
-				input.form-control.js-question-search(type="text",placeholder="Busca por entidad, tema o palabra clave.")
-			div.form-group.pull-right
-				button.btn.btn-info.btn-sm Buscar
+			form.js-question-search-form(action="/")
+				div.form-group
+					label(for='ctaFormAgency') Entidad 
+					select.form-control.js-agencies-list(name='agency')
+						option(value='') Elige una entidad de la lista.
+						- each agency in agencies
+								option(value=agency.name)=agency.name
+				div.form-group
+					input.form-control.js-question-search(type="text",placeholder="Busca por entidad, tema o palabra clave.")
+				div.form-group
+					input.btn.btn-info.btn-sm(type="submit",value="Buscar")
 			div.form-group
 				p Mostrando 
 				div.btn-group.btn-group-sm(data-toggle="buttons")
@@ -24,6 +34,7 @@ block content
 					label.btn.btn-success.js-btn-filter(data-filter-type="sent")
 						input(type="radio",name="statuses",autocomplete="off")
 						| Por responder
+		hr
 		div.results.js-questions(data-parsed-agencies=parsedAgencies,data-questions=questions)
 			- each question in questions
 				div.question.js-question(data-id=question.id,data-title=question.title,data-agency-name=parsedAgencies[question.agencyId],data-status=question.status)
@@ -32,4 +43,11 @@ block content
 						h4=question.title
 						span.for=parsedAgencies[question.agencyId]
 						p=question.formattedDate
+		ul.pagination
+			- var pageCount = 1;
+			- while ( pages-- ) {
+				li
+					a.js-pagination-page(href="",data-page=pageCount)=pageCount
+			- 	pageCount++;
+			- }
 		hr
