--- a/views/browseQuestions.jade
+++ b/views/browseQuestions.jade
@@ -39,7 +39,7 @@ block content
 			- each question in questions
 				div.question.js-question(data-id=question.id,data-title=question.title,data-agency-name=parsedAgencies[question.agencyId],data-status=question.status)
 					a(href="/solicitudes/" + question.id + "/" + question.slug)
-						span.pi-icon(class="pi-icon-#{question.status}") 
+						span.pi-icon.pi-icon-lg(class="pi-icon-#{question.status}") 
 						h4=question.title
 						span.for=parsedAgencies[question.agencyId]
 						p=question.formattedDate
