--- a/views/sendQuestion.jade
+++ b/views/sendQuestion.jade
@@ -7,7 +7,7 @@ block head
 
 block content
 	div.send-question-holder.js-content(data-api-url='#{apiUrl}',data-view='sendQuestion')
-		h3 Envía una Solicitud de Acceso a la Información Pública
+		h1.pidelainfo Envía una Solicitud de Acceso a la Información Pública
 		p Usa este formulario para enviar una nueva Solicitud de Acceso a la Información Pública
 		p Recuerda 
 			a(href='/solicitudes-enviadas') verificar que la información que solicitas no se encuentra en nuestra base de datos 
