--- a/views/agencies.jade
+++ b/views/agencies.jade
@@ -5,7 +5,7 @@ block head
 
 block content
 	div.agencies-holder
-		h1 Entidades participantes
+		h2.pidelainfo Entidades participantes
 		div.row
 			div.col-md-6
 				div.extra-info-holder
