--- a/views/browseQuestions.jade
+++ b/views/browseQuestions.jade
@@ -8,7 +8,7 @@ block content
 		p.collapse.alert.alert-danger.alert-dismissable.js-error-alert
 			a.close(href="#",data-dismiss="alert" aria-label="close") &times; 
 			| Hubo un error con tu búsqueda, por favor intentalo de nuevo.
-		h2 Solicitudes enviadas
+		h1.pidelainfo Solicitudes enviadas
 		p Usa el formulario para buscar por Entidad o Palabra clave. Luego dale clic a Buscar.
 		div.search-holder.js-search-holder
 			form.js-question-search-form(action="/")
